[Backend] - Tags Integration tests. Initial commit